--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -12,6 +12,10 @@ jobs:
     name: Build and test
     runs-on: ubuntu-latest
 
+    env:
+      MIX_ENV: test
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
     steps:
     - uses: actions/checkout@v2
     - name: Set up Elixir
@@ -29,3 +33,5 @@ jobs:
       run: mix deps.get
     - name: Run tests
       run: mix test
+    - name: Run coveralls
+      run: mix coveralls.github
